<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".characters.ui.CharactersFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/charactersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/charactersProgressBar"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/fragment_staff_list_item" />

    <ProgressBar
        android:id="@+id/charactersProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/white"
        android:visibility="visible" />

</RelativeLayout>